# techno_cpp_task1

./: .gitignore  .gitmodules  .travis.yml  README.md
filter/: CMakeLists.txt
filter/inc/: filter.h  str.h  vec.h
filter/src/: filter.c  main.c  str.c  vec.c
filter/unit_tests/: CMakeLists.txt  filter_tests.cpp  str_tests.cpp  vector_tests.cpp
